log
Sat 06 May 2023 04:03:39 AM UTC: 
 tests:  0|5
total_score: 0/70
4e058c2
Sat 06 May 2023 05:13:12 AM UTC: 
 sudoku.c | 18 +++++++++++++++---
 1 file changed, 15 insertions(+), 3 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:61:21: error: implicit declaration of function ‘addElement’ [-Werror=implicit-function-declaration]
   61 |                     addElement(list, new_node);
      |                     ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
3b34a77
Sat 06 May 2023 05:15:03 AM UTC: 
 sudoku.c | 15 +++++++++------
 1 file changed, 9 insertions(+), 6 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:64:21: error: implicit declaration of function ‘appent’ [-Werror=implicit-function-declaration]
   64 |                     appent(list, new_node);
      |                     ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
4c236ee
Sat 06 May 2023 05:16:42 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:64:21: error: implicit declaration of function ‘addElement’ [-Werror=implicit-function-declaration]
   64 |                     addElement(list, new_node);
      |                     ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
f789ac3
Sat 06 May 2023 05:17:31 AM UTC: 
 sudoku.c | 25 +++++++++++++------------
 1 file changed, 13 insertions(+), 12 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:60:16: error: implicit declaration of function ‘append’ [-Werror=implicit-function-declaration]
   60 |                append(list, new_node);
      |                ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
2850c93
Sat 06 May 2023 05:21:34 AM UTC: 
 sudoku.c | 13 +++++--------
 1 file changed, 5 insertions(+), 8 deletions(-)
 tests:  2|4
total_score: 15/70
6ba406a
Sat 06 May 2023 06:29:57 AM UTC: 
 sudoku.c | 35 +++++++++++++++++++++++++++++++++++
 1 file changed, 35 insertions(+)
 tests:  5|3
total_score: 35/70
342a7da
Sat 06 May 2023 08:35:19 AM UTC: 
 sudoku.c | 14 ++++++++++++--
 1 file changed, 12 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:95:31: error: ‘new_node’ undeclared (first use in this function)
   95 |                   if(is_valid(new_node)){
      |                               ^~~~~~~~
sudoku.c:95:31: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:98:23: error: implicit declaration of function ‘free_node’ [-Werror=implicit-function-declaration]
   98 |                       free_node(new_node);
      |                       ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
05be01c
Sat 06 May 2023 08:36:47 AM UTC: 
 sudoku.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:96:22: error: ‘new_node’ may be used uninitialized [-Werror=maybe-uninitialized]
   96 |                   if(is_valid(new_node)){
      |                      ^~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
1ba05cb
Sat 06 May 2023 08:37:35 AM UTC: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:97:22: error: ‘new_node’ may be used uninitialized [-Werror=maybe-uninitialized]
   97 |                   if(is_valid(new_node)){
      |                      ^~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
d06716c
Sat 06 May 2023 08:38:36 AM UTC: 
 sudoku.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:100:24: error: implicit declaration of function ‘free_node’ [-Werror=implicit-function-declaration]
  100 |                        free_node(new_node);
      |                        ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
9c16394
Sat 06 May 2023 08:38:45 AM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  7|1
total_score: 55/70
d918de5
Sat 06 May 2023 08:38:56 AM UTC: 
 sudoku.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
test.c: In function ‘get_adj_nodes’:
test.c:245:5: error: ‘main’ is normally a non-static function [-Werror=main]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
  262 | }
      | ^
test.c:263: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:245:5: error: ‘main’ defined but not used [-Werror=unused-function]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:7:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
d524e98
Sat 06 May 2023 08:39:04 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 55/70
9cd83f1
Sat 06 May 2023 11:07:37 PM UTC: 
 sudoku.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:124:12: error: implicit declaration of function ‘isEmptyStack’ [-Werror=implicit-function-declaration]
  124 |     while(!isEmptyStack(stack)){
      |            ^~~~~~~~~~~~
sudoku.c:125:30: error: void value not ignored as it ought to be
  125 |         Node* current_node = pop(stack);
      |                              ^~~
sudoku.c:128:13: error: implicit declaration of function ‘free_stack’ [-Werror=implicit-function-declaration]
  128 |             free_stack(stack);
      |             ^~~~~~~~~~
sudoku.c:137:9: error: implicit declaration of function ‘free_list’ [-Werror=implicit-function-declaration]
  137 |         free_list(adj_nodes);
      |         ^~~~~~~~~
sudoku.c:138:9: error: implicit declaration of function ‘free_node’ [-Werror=implicit-function-declaration]
  138 |         free_node(current_node);
      |         ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
ced65c1
